; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-etm3x.c_etm_set_pwrup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-etm3x.c_etm_set_pwrup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etm_drvdata = type { i64 }

@ETMPDCR = common dso_local global i64 0, align 8
@ETMPDCR_PWD_UP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.etm_drvdata*)* @etm_set_pwrup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @etm_set_pwrup(%struct.etm_drvdata* %0) #0 {
  %2 = alloca %struct.etm_drvdata*, align 8
  %3 = alloca i32, align 4
  store %struct.etm_drvdata* %0, %struct.etm_drvdata** %2, align 8
  %4 = load %struct.etm_drvdata*, %struct.etm_drvdata** %2, align 8
  %5 = getelementptr inbounds %struct.etm_drvdata, %struct.etm_drvdata* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @ETMPDCR, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @readl_relaxed(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @ETMPDCR_PWD_UP, align 4
  %11 = load i32, i32* %3, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load %struct.etm_drvdata*, %struct.etm_drvdata** %2, align 8
  %15 = getelementptr inbounds %struct.etm_drvdata, %struct.etm_drvdata* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @ETMPDCR, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @writel_relaxed(i32 %13, i64 %18)
  %20 = call i32 (...) @mb()
  %21 = call i32 (...) @isb()
  ret void
}

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1

declare dso_local i32 @mb(...) #1

declare dso_local i32 @isb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
